<resources>
    <string name="app_name">巴拿赫一键求救</string>

    // 云通信
    <string name="chat_top">置顶聊天</string>
    <string name="chat_delete">删除聊天</string>
    <string name="quit_chat_top">取消置顶</string>

    // 登录相关
    <string name="account">用户名</string>
    <string name="password">密码</string>

    // "我"相关
    <string name="profile">我</string>
    <string name="id">账号：%1$s</string>
    <string name="modify_user_icon">修改头像</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="modify_signature">修改个性签名</string>
    <string name="add_rule">加我为好友时</string>
    <string name="allow_type_allow_any">允许任何人</string>
    <string name="allow_type_deny_any">拒绝任何人</string>
    <string name="allow_type_need_confirm">需要验证</string>
    <string name="exit">退出登录</string>
    <string name="about">关于</string>

    // 主页Tab相关
    <string name="tab_main_tab_text">首页</string>
    <string name="tab_contact_tab_text">联系人</string>
    <string name="tab_conversation_tab_text">消息</string>
    <string name="tab_profile_tab_text">我</string>

    // "+"menu相关
    <string name="add_friend">添加好友</string>
    <string name="add_group">添加群聊</string>
    <string name="start_conversation">发起会话</string>
    <string name="create_group_chat">创建群聊</string>
    <string name="create_chat_room">创建聊天室</string>
    <string name="create_team">创建团队</string>
    <string name="create_private_group">创建讨论组</string>
    <string name="hint_add_user_id">联系人电话</string>
    <string name="hint_add_wording">请输入验证消息</string>
    <string name="contact_add">添加</string>
    <string name="user_id">联系人电话</string>
    <string name="add_wording">验证消息</string>

    // 群信息相关
    <string name="tips_empty_group_member">请选择群成员</string>
    <string name="tips_empty_group_type">请选择加群方式</string>
    <string name="no_friend_apply">暂无好友申请</string>


    // 新朋友
    <string name="request_agree">同意</string>
    <string name="request_accepted">已接受</string>
    <string name="request_waiting">等待验证</string>

    <string name="test_custom_action">自定义消息</string>
    <string name="test_custom_message">查看详情>></string>


    //----一键求救App用语
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">发现</string>
    <string name="title_notifications">消息</string>
    <string name="title_mine">我的</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="emergency">紧急求救</string>
    <string name="help">日常求助</string>
    <string name="alram">风险预警</string>
    <string name="one_key_dial">一键拨打</string>
    <string name="one_key_police_alarm">一键报警</string>
    <string name="video_help">视频求救</string>
    <string name="team_manage">团队管理</string>
    <string name="i_emergency">我要求救</string>
    <string name="start_use">进入应用</string>
    <string name="user_reg">注册</string>
    <string name="get_comfirm_code">获取验证码</string>
    <string name="user_login">登录</string>
    <string name="tab_name_1">日常求助</string>
    <string name="tab_name_2">紧急求救</string>
    <string name="tab_name_3">风险预警</string>
    <string name="tab_name_4">我的</string>
    <string name="str_tab1_title">日常求助</string>
    <string name="str_tab2_title">紧急求救</string>
    <string name="str_tab3_title">预警发布</string>
    <string name="str_tab4_title">我的</string>
    <string name="go_alarm">发布预警</string>
    <string name="go_help">发布求助</string>
    <string name="go_emergency">发布求救</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="input_reply">输入回复内容</string>
    <string name="input_search_key">输入搜索关键字</string>
    <string name="reply">回复</string>
    <string name="reply_content">回复</string>
    <string name="send_location">发送位置</string>
    <string name="show_location">查看位置</string>
    <string name="re_charge">充值</string>


    <!-- 注册页 -->
    <string name="username">用户名：</string>
    <string name="phone_no">手机号：</string>
    <string name="name">真实姓名：</string>
    <string name="comfirm_password">密码确认：</string>
    <string name="phone">电	话：</string>
    <string name="email">邮	箱：</string>
    <string name="addr">住	址：</string>
    <string name="sex">性	别：</string>
    <string name="identify">身份证：</string>
    <string name="company">工作或居住城市(地区)：</string>
    <string name="portrait">头像：</string>
    <string name="comfirm_code">短信验证码</string>
    <string name="please_input_user_name">请输入用户名</string>
    <string name="please_input_name">请输入真实姓名</string>
    <string name="please_input_phone_no">请输入手机号码</string>
    <string name="please_input_comfirm_code">请输入短信验证码</string>
    <string name="please_input_phone">请输入电话</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_addr">请输入住址</string>
    <string name="please_input_sex">请输入性别</string>
    <string name="please_input_identify">请输入身份证</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_comfirm_password">请再次输入密码</string>
    <string name="please_input_idcard">请输入身份证号码</string>
    <string name="please_input_company">请输入工作或居住城市(地区)</string>
    <string name="please_input_word_unit">请输入工作单位</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="fullname">姓名</string>
    <string name="relation">关系</string>
    <string name="tel">联系电话</string>以
    <string name="addContacts">添加紧急联系人</string>
    <string name="contacts">紧急联系人</string>
    <string name="reg_sucess_add_contacts">已注册成功，请添加紧急联系人</string>
    <string name="have_no_contacts">暂无紧急联系人</string>
    <string name="add_more_one">再添加一个联系人</string>
    <string name="save">保存</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="user_personal_info">修改个人信息</string>
    <string name="modify_contact">修改联系人</string>
    <string name="setEmergencyContacts">设置紧急联系人</string>
    <string name="improve_info">完善信息</string>


    <!-- 我的 -->
    <string name="account_balance">账户余额：103.2元</string>
    <string name="my_help">我的求助</string>
    <string name="my_alarm">我的预警</string>
    <string name="my_reply">我的回复</string>
    <string name="my_team">我的团队</string>
    <string name="my_like">我的收藏</string>
    <string name="my_emergency">我的求救</string>
    <string name="teach_manage">教学管理</string>
    <string name="product_sale">产品推广</string>
    <string name="zhaoshen">招生信息</string>
    <string name="baoxian">保险服务</string>


    <string name="about_us">关于</string>
    <string name="change_pw">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="setting">设置</string>
    <string name="back">返回</string>
    <string name="send">发送</string>
    <string name="input_title">输入当前预警的标题</string>
    <string name="input_desc">输入当前预警的描述</string>
    <string name="fifth_long">15个汉字或者30个英文字母以内</string>
    <string name="title_activity_send_alarm">SendAlarmActivity</string>
    <string name="title_activity_reg">RegActivity</string>
    <string name="title_activity_emergency">EmergencyActivity</string>
    <string name="action_settings">Settings</string>
    <string name="not_login">未登录</string>
    <string name="search">搜索</string>
    <string name="input_miaoshu">请输入风险描述</string>
    <string name="yiduiduo">一对多</string>
    <string name="old_pw">旧密码：</string>
    <string name="new_pw">新密码：</string>
    <string name="confirm_new_pw">确认新密码：</string>
    <string name="agree">同意</string>

    <!-- 求救类型 -->
    <string name="alram110">110求救(公安)</string>
    <string name="alram120">120求救(医院)</string>
    <string name="alram119">119求救(火警)</string>
    <string name="alram122">122求救(交通)</string>
    <string name="s110">110</string>
    <string name="s120">120</string>
    <string name="s119">119</string>
    <string name="s122">122</string>
    <string name="alramGongYi">公益组织(应急办)</string>
    <string name="title_activity_my_alarm">MyAlarmActivity</string>
    <string name="one_key_emergency">一键求救</string>
    <string name="info_emergency">信息求救</string>
    <string name="alram_home">紧急联系人(家庭)</string>
    <string name="alram_friend">紧急联系人(朋友)</string>
    <string name="home_chat">家庭会话</string>

    <!-- 求助类型 -->
    <string name="help1">求救</string>
    <string name="help2">迷路</string>
    <string name="help3">献血</string>
    <string name="help4">寻人</string>
    <string name="help5">食饮</string>
    <string name="help6">其他</string>
    <string name="star">*</string>

    <!-- 请求出错信息 -->
    <string name="err_parse">解释错误</string>
    <string name="err_web">连接服务器错误，请稍后再试..</string>
    <string name="err_timeout">连接服务器超时，请稍后再试..</string>
    <string name="err_unknown_host">未知主机，请联系管理员..</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="on_request">正在请求数据...</string>
    <string name="title_activity_chat_list">ChatListActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_send_location">SendLocationActivity</string>
    <string name="title_activity_show_location">ShowLocationActivity</string>
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="tips1">遇到风险环境或事件，可发布预警，亦可查询风险信息</string>
    <string name="tips2">日常遇到需要求助的事件，可发布信息，并可与求助者对话</string>
    <string name="tips3">110求救、公益求救、家庭朋友求救</string>
    <string name="please_input_oldpw">请输入旧密码</string>
    <string name="please_input_newpw">请输入新密码</string>
    <string name="submit">提交</string>
    <string name="copyright">版权所有，任何剽窃、抄袭、改装等嫌疑手段仿造必究</string>
    <string name="author">发明人 设计人：庞素琳</string>
    <string name="gongsi">研发机构：广州巴拿赫大数据科技有限公司</string>
    <string name="older_mode">老人模式</string>
    <string name="title_activity_show_image">ShowImageActivity</string>
    <string name="title_activity_send_emergency">SendEmergencyActivity</string>
    <string name="title_activity_home_chat_list">HomeChatListActivity</string>
    <string name="title_activity_protocol">ProtocolActivity</string>
    <string name="userProtocol">使用协议</string>
    <string name="protocol">用户使用本平台功能时，（1）不允许发布一切与色情相关的新闻、视频、图片或文字描述，散布淫秽、色情、赌博、暴力、恐怖或者教唆犯罪的；（2）不允许在平台上探讨一切与色情或不雅事件相关的内容；（3）不允许在平台上攻击他人，侮辱或诽谤他人，侵害他人的合法权益；（4）不允许在平台上散步谣言，扰乱社会秩序，破坏社会稳定的；（5）不允许在平台上宣传反党、反国、反社会和反人民的一切反动言论，煽动非法集会、结社、游行、示威、聚众扰乱社会秩序；（6）不允许在平台上发布有损党、国、社会和人民的形象言论；（7）不允许传播一切不利于团结的负面消息，以非法民间组织名义活动的，破坏国家宗教政策，宣扬邪教和封建迷信的。一旦平台监测到，视情节严重程度向司法相关部门举报。用户使用本平台功能时，（1）不允许发布一切与色情相关的新闻、视频、图片或文字描述，散布淫秽、色情、赌博、暴力、恐怖或者教唆犯罪的；（2）不允许在平台上探讨一切与色情或不雅事件相关的内容；（3）不允许在平台上攻击他人，侮辱或诽谤他人，侵害他人的合法权益；（4）不允许在平台上散步谣言，扰乱社会秩序，破坏社会稳定的；（5）不允许在平台上宣传反党、反国、反社会和反人民的一切反动言论，煽动非法集会、结社、游行、示威、聚众扰乱社会秩序；（6）不允许在平台上发布有损党、国、社会和人民的形象言论；（7）不允许传播一切不利于团结的负面消息，以非法民间组织名义活动的，破坏国家宗教政策，宣扬邪教和封建迷信的。一旦平台监测到，视情节严重程度向司法相关部门举报。。。。</string>
    <string name="title_activity_re_charge">ReChargeActivity</string>


    <string name="_10yuan">10元</string>
    <string name="_20yuan">20元</string>
    <string name="_30yuan">30元</string>
    <string name="_50yuan">50元</string>
    <string name="_100yuan">100元</string>
    <string name="_200yuan">200元</string>
    <string name="_300yuan">300元</string>
    <string name="_500yuan">500元</string>
    <string name="_otherYuan">其他</string>
    <string name="rechargeNow">立即充值</string>
    <string name="input_jine">输入金额</string>

    <string name="position">位置</string>
    <string name="test_map">测试地图</string>
    <string name="helping">求救中..\n点击停止求救</string>

</resources>
