<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="6dp"
            android:text="@string/improve_info"
            android:textColor="@color/black"
            android:textSize="@dimen/title_textsize" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:layout_marginTop="@dimen/btn_margin_top">
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_gray"
            android:textColorHint="#9F9FA0"
            android:textSize="15sp"
            android:drawableLeft="@drawable/xingming"
            android:drawablePadding="10dp"
            android:hint="@string/please_input_name"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#CCCCCC"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">
        </View>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_gravity="center"
                android:textColor="@color/dark_gray"
                android:textColorHint="#9F9FA0"
                android:textSize="15sp"
                android:drawableLeft="@drawable/xingbie"
                android:drawablePadding="10dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:checked="true"
                    android:text="@string/male">
                </RadioButton>
                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/female">
                </RadioButton>
            </RadioGroup>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#CCCCCC"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">
        </View>
        <EditText
            android:id="@+id/et_idno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_gray"
            android:textColorHint="#9F9FA0"
            android:textSize="15sp"
            android:drawableLeft="@drawable/shenfenzheng"
            android:drawablePadding="10dp"
            android:hint="@string/please_input_identify"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#CCCCCC"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">
        </View>
        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_gray"
            android:textColorHint="#9F9FA0"
            android:textSize="15sp"
            android:drawableLeft="@drawable/dianhuahaoma"
            android:drawablePadding="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#CCCCCC"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">
        </View>
        <EditText
            android:id="@+id/et_work_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_gray"
            android:textColorHint="#9F9FA0"
            android:textSize="15sp"
            android:drawableLeft="@drawable/gongzuodanwei"
            android:drawablePadding="10dp"
            android:hint="@string/please_input_word_unit"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#CCCCCC"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">
        </View>
        <EditText
            android:id="@+id/et_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/dark_gray"
            android:textColorHint="#9F9FA0"
            android:textSize="15sp"
            android:drawableLeft="@drawable/zhuzhi"
            android:drawablePadding="10dp"
            android:hint="@string/please_input_addr"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#CCCCCC"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="@dimen/btn_margin_top"
                android:layout_weight="1"
                android:background="@drawable/buttonstyle"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>